Improve (temporary) file handling in tests
- Let Java handle temporary files (OS independent, guaranteed to be deleted on exit of JVM). It's good at it.
- Re-use existing util methods for reading / wrinting (temporary) files.
- Log exceptions i.s.o. using printStackTrace(). This puts them on the right place in the test logs.